# vod-archive

./: .gitignore  AGENTS.md  README.md  archivetwitch.py  archiveyoutube.py  archiveyoutube_example.sh  gettwitchbearertoken.sh  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
vod_archive/: __init__.py  __main__.py  models.py
