[project]
name = "vod-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.32.5", "yt-dlp>=2025.9.5"]

[dependency-groups]
lint = ["ruff"]
type = [
    "mypy>=1.18.1",
    "types-requests>=2.32.4.20250913",
]

[tool.uv]
default-groups = ["lint"]

[tool.ruff]
cache-dir = "~/.cache/ruff"
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-fixable = ["B", "I001"]
select = ["ALL"] # include all the rules, including new ones
ignore = [
    # Modules
    "DJ",  # Django
    "PTH", # KG builtin-open is fine
    "DTZ", # KG no need to specify timezone

    # Specific rules
    "TD002",  # KG Verbose TODO, only I work on this project
    "TD003",  # KG Verbose TODO, only I work on this project
    "T201",   # KG Print is fine at this scale
    "RUF003", # KG The yt-dlp example code comments use a fun character
]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 40
