[project]
name = "vod-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.10,<0.15", # yt-dlp doesnt support 0.15 yet
    "deno>=2.7.12",
    "pydantic>=2.13.3,<3.0.0",
    "requests>=2.32.5",
    "yt-dlp>=2026.1.1",
]

[project.optional-dependencies]
lint = ["ruff"]
type = ["ty>=0.0.32", "types-requests>=2.32.4.20250913"]


[tool.ruff]
cache-dir = "~/.cache/ruff"
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-fixable = ["B", "I001"]
select = ["ALL"] # include all the rules, including new ones
ignore = [
    # Modules
    "DJ",  # Django
    "DTZ", # no need to specify timezone

    # Specific rules
    "TD002",  # Verbose TODO, only I work on this project
    "TD003",  # Verbose TODO, only I work on this project
    "T201",   # Print is fine at this scale
    "RUF003", # The yt-dlp example code comments use a fun character
    "COM812", # Formatter conflict
    "S311",   # No real crypto
    "ERA001", # Commented out code is whatever
    "ANN401", # Any is fine for debug/hook functions
]

[tool.ruff.lint.mccabe]
max-complexity = 12


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 40
